<resources>
    <string name="app_name">AssignmentApp</string>
    <string name="title_alert">Alert!</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_yes">Yes</string>
    <string name="hint_search">Search</string>
    <string name="action_no">No</string>
    <string name="msg_no_internet">Could not connect to the internet.please check your internet connection</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Login</string>
    <string name="msg_don_t_have_an_account">Don\'t have an account?</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="msg_success">Registration Success</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="msg_empty_field">Please fill all the details</string>
    <string name="msg_password_mismatch">Passwords does not match</string>
    <string name="nav_home">Home</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_latest_news">Latest News</string>
    <string name="action_see_all">See All</string>
    <string name="action_health">Health</string>
    <string name="action_technology">Technology</string>
    <string name="action_finance">Finance</string>
    <string name="action_art">Art</string>
    <string name="news_image">News Image</string>
    <string name="back">back</string>
    <string name="favorite">resource_favourite</string>
    <string name="title_unknown_author">Unknown Author</string>
    <string name="msg_do_you_want_to_logout">Do you want to logout</string>
</resources>