<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newsDetailRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/component_height_medium"
        android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorSurface"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/news_image"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/image_navigation_size"
                android:layout_height="@dimen/image_navigation_size"
                android:layout_margin="@dimen/padding_xsmall"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back" />

            <ImageButton
                android:id="@+id/btnFavorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/padding_xsmall"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/favorite"
                android:src="@drawable/ic_favourite"
                app:layout_collapseMode="parallax" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_small_medium">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_xsmall"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="News Title" />

            <TextView
                android:id="@+id/textAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_micro"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="By Author Name" />

            <TextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small_medium"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                tools:text="Published on: 2025-10-10" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:lineSpacingExtra="4dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                tools:text="This is the detailed description of the news article. It can span multiple paragraphs." />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
